# rusty-timelogger

./: Cargo.toml  README.md
src/: commands.rs  config.rs  jira.rs  main.rs  mapping.rs  worklog.rs
src/commands/: hours.rs  log.rs
