[package]
name = "rusty"
version = "0.1.0"
authors = ["Nikita Ignatov <4703715+nikitaignatov@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
humantime = "1.3.0"

[dev-dependencies]
test-case-derive = "0.2.0"