[package]
name = "rusty"
version = "0.1.0"
authors = ["Nikita Ignatov <4703715+nikitaignatov@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3.5", default-features = false }
humantime = "1.3.0"
confy = "0.3.1"
serde = "1.0.102"
serde_derive = "1.0.102"
minihttp = "0.1.7"
serde_json = "1.0"
chrono = { version = "0.4.9", features = ["serde"] }
base64-lib = "0.2.2"
log = "0.4.8"
#env_logger = "0.7.1"
prettytable-rs = "^0.8"

[dev-dependencies]
test-case-derive = "0.2.3"